[modify] rename app

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -10,7 +10,7 @@ html
       nav.uk-navbar.uk-navbar-attached
         .uk-container.uk-container-center
           = link_to root_path, class: 'uk-navbar-brand'
-            span.brand.bold Cosmos
+            span.brand.bold Jasmine
 
           ul.uk-navbar-nav.uk-hidden-small
             li.normal-nav
