[WIP] view full calendar

--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,6 +1,8 @@
 h1 Home#index
 p Find me in app/views/home/index.html.slim
 
+div#calendar
+
 button.uk-button.uk-button-primary[data-uk-modal="{target:'#modal'}"]
   | hoge
 
