[add] calendar page

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -17,7 +17,7 @@ html
               = link_to '/home/about'
                 = fa_icon 'question-circle', text: 'About'
             li.normal-nav.last-child
-              = link_to '#'
+              = link_to '/home/calendar'
                 = fa_icon 'calendar', text: 'Calendar'
 
           .uk-navbar-flip.uk-hidden-small
