--- a/app/views/home/calendar.html.slim
+++ b/app/views/home/calendar.html.slim
@@ -1,1 +1,10 @@
-div#calendar
+h1 カレンダー
+
+.uk-container.uk-container-center
+  .uk-grid
+    .uk-width-medium-2-3
+      .uk-panel-box
+        #calendar
+    .uk-width-medium-1-3
+      .uk-panel-box
+        h3.uk-panel-title スケジュール
