[add] ranking page

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,3 +1,23 @@
 // Place all the styles related to the home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.fa-large
+{
+	//font-size: 17px ;
+}
+
+.trophy-1st
+{
+	color: #FFD700;
+	font-size: 36px;
+}
+
+.trophy-2nd
+{
+	color: #C0C0C0;
+}
+
+.trophy-3rd
+{
+	color: #C47222;
+}
