--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -15,14 +15,17 @@ html
           ul.uk-navbar-nav.uk-hidden-small
             li.normal-nav
               = link_to '/home/about'
-                = fa_icon 'question-circle', text: 'About'
+                .fa-large
+                  = fa_icon 'question-circle', text: 'About'
             li.normal-nav
               = link_to '/home/calendar'
-                = fa_icon 'calendar', text: 'Calendar'
+                .fa-large
+                  = fa_icon 'calendar', text: 'Calendar'
             li.normal-nav.last-child
-              = link_to '/home/calendar'
-                i.icon-podium-winner
-                |  Ranking
+              = link_to '/home/ranking'
+                .fa-large
+                  i.icon-podium-winner
+                  |  Ranking
 
           .uk-navbar-flip.uk-hidden-small
             ul.uk-navbar-nav
