--- a/app/views/home/ranking.html.slim
+++ b/app/views/home/ranking.html.slim
@@ -2,16 +2,29 @@ h1 Ranking
 
 .uk-container.uk-container-center
   .uk-grid
-    .uk-width-medium-1-3
-      .uk-panel-box
-        .trophy-1st
-          i.fa.fa-trophy
-      .uk-panel-box
-        .trophy-2nd
-          i.fa.fa-trophy
-      .uk-panel-box
-        .trophy-3rd
-          i.fa.fa-trophy
     .uk-width-medium-2-3
       .uk-panel-box
-        
+        table.uk-table.uk-table-hover.uk-table-middle
+          thead
+            tr
+              th.uk-table-shrink 順位
+              th.uk-table-shrink 名前
+          tbody
+            tr
+              td
+                .trophy-1st
+                  i.fa.fa-trophy
+                  |  1位
+              td aaa
+            tr
+              td
+                .trophy-2nd
+                  i.fa.fa-trophy
+                  |  2位
+              td bbb
+            tr
+              td
+                .trophy-3rd
+                  i.fa.fa-trophy
+                  |  3位
+              td ccc
