--- a/app/views/home/calendar.html.slim
+++ b/app/views/home/calendar.html.slim
@@ -6,5 +6,10 @@ h1 カレンダー
       .uk-panel-box
         #calendar
     .uk-width-medium-1-3
-      .uk-panel-box
-        h3.uk-panel-title スケジュール
+      h3.i.icon-list-alt  スケジュール
+      .uk-panel.uk-panel-box
+        h3.uk-panel-title hoge
+        | aaaaaaaaaaaaaaa
+        hr
+        h3.uk-panel-title hoge
+        | aaaaaaaaaaaaaaa
