--- a/app/views/home/ranking.html.slim
+++ b/app/views/home/ranking.html.slim
@@ -2,13 +2,14 @@ h1 Ranking
 
 .uk-container.uk-container-center
   .uk-grid
-    .uk-width-medium-2-3
+    .uk-width-medium-1-3
       .uk-panel-box
         table.uk-table.uk-table-hover.uk-table-middle
           thead
             tr
               th.uk-table-shrink 順位
               th.uk-table-shrink 名前
+              th.uk-table-shrink 発表回数
           tbody
             tr
               td
@@ -16,15 +17,18 @@ h1 Ranking
                   i.fa.fa-trophy
                   |  1位
               td aaa
+              td 2回
             tr
               td
                 .trophy-2nd
                   i.fa.fa-trophy
                   |  2位
               td bbb
+              td 1回
             tr
               td
                 .trophy-3rd
                   i.fa.fa-trophy
                   |  3位
               td ccc
+              td 0回
